Dec 06, 2001: Ludwig Nussel <l-n@users.sourceforge.net>
- added rtcw gametypes
- changed master protocol for rtcw to 57
- added a missing gettext call

Nov 22, 2001: Ludwig Nussel <l-n@users.sourceforge.net>
- the ppc problem turned out to be a bug in filter.c, special thanks to Philipp
  Thomas for finding it!
- other changes by Philipp Thomas to get rid of some compiler warnings
- updated german translation

Nov 21, 2001: Ludwig Nussel <l-n@users.sourceforge.net>
- fixed the ppc fix (hopefully ;)

Nov 21, 2001: Jordi Mallach <jordi@sindominio.net>
- NEWS updates for 0.9.7

Nov 21, 2001: Jordi Mallach <jordi@sindominio.net>
- es.po updates

Nov 21, 2001: Ludwig Nussel <l-n@users.sourceforge.net>
- updated TODO

Nov 19, 2001: Ludwig Nussel <l-n@users.sourceforge.net>
- workaround for ppc compiler bug

Oct 23, 2001: Ludwig Nussel <l-n@users.sourceforge.net>
- changed wording and my email in about dialog
- removed gnuconfig.h.in from cvs

Oct 18, 2001: Ludwig Nussel <l-n@users.sourceforge.net>
- fixed compiler warnings
- replaced some strange sprintf's with g_strdup
- made server_pass_filter return FALSE if ping==-1
- fixed #define's for gametypes
- set s->game to either fs_game, game or gamename rule in that order (game will
  be supported by next qstat)

Oct 13, 2001: Ludwig Nussel <l-n@users.sourceforge.net>
- added gametype strings for TribalCTF and Threewave.
  Unfortunately TribalCTF servers modify their gamename variable,
  so this is not really useful yet.

Oct 13, 2001: Ludwig Nussel <l-n@users.sourceforge.net>
- added gameaholic.com rune server list
- game and gametype are now displayed in LaunchInfo.txt

Oct 07, 2001: Ludwig Nussel <l-n@users.sourceforge.net>
- changed default commandline for qs & qws for quakeforge
- added default commandlines for rune,tribes2,wolf and ut

Oct 05, 2001: Ludwig Nussel <l-n@users.sourceforge.net>
- removed quakeforge workaround
- added -Wall to CFLAGS

Oct 05, 2001: Jordi Mallach <jordi@sindominio.net>