@@ -1,3 +1,7 @@
+Dec 07, 2001: Ludwig Nussel <l-n@users.sourceforge.net>
+- Patch by Ben Winslow to create OS/CPU statistics for RTCW, Kingpin and
+  Half-Life
+
 Dec 06, 2001: Ludwig Nussel <l-n@users.sourceforge.net>
 - added rtcw gametypes
 - changed master protocol for rtcw to 57
